data/derived/comb/progs/unify/prog6478.ml.out
Characters 114-118:
  | h::t -> if List.mem(h,seen)=true then helper(seen',t)
                                ^^^^
Error: This expression has type bool but an expression was expected of type
         ('a * 'b) list -> bool
